# RSA-crypto

./: .coveragearc  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
documentation/: design_document.md  implementation_document.md  test_document.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: crypt.py  crypto.py  index.py  io.py  key_gen_utils.py  ui.py
src/tests/: crypt_test.py  key_gen_utils_test.py
