[tool.poetry]
name = "rsa"
version = "0.1.0"
description = ""
authors = ["Oskar Sjölund <oskar.sjolund93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
